Fix invisible thumbnail upload link

--- a/assets/style.css
+++ b/assets/style.css
@@ -300,17 +300,18 @@ svg.feather.feather-settings circle {
     box-shadow: none !important;
 }
 
-.button-file {
+.first-step-block .button-file.form-control {
     visibility: hidden !important;
     position: relative !important;
 }
 
-.button-file:after {
+.first-step-block .button-file.form-control:after {
     visibility: visible !important;
     position: absolute !important;
     top: 0 !important;
     left: 0 !important;
     content: "File upload disabled." !important;
+    color: var(--actionButtonColor) !important;
 }
 
 .first-step-block ngb-tooltip-window {
